test_regress/t/t_cover_unused_bad.out
%Warning-UNUSEDSIGNAL: t/t_cover_unused_bad.v:14:8: Signal is not used: 'unu3'
                                                  : ... note: In instance 't'
   14 |    bit unu3 = 0;
      |        ^~~~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=latest
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Error: Exiting due to
